# tauri-svelte-typescript-app-example

./: .gitignore  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
public/: index.html
src/: App.svelte  main.ts  routes.ts  server.ts
src-tauri/: Cargo.toml
src-tauri/src/: cmd.rs  main.rs
src/components/: Cell.svelte  LogsCell.svelte  VirtualList.svelte  VirtualTable.svelte
src/components/LogDirectories/: LogDirectoriesTableRowCell.svelte
src/components/LogDirectoryDetails/: LogDirectoryDetailsTableCheckboxRowCell.svelte
src/components/UI/Input/: Checkbox.svelte
src/components/UI/Navigation/: NavBar.svelte  NavBreadcrumbs.svelte  NavLink.svelte
src/components/UI/Table/: VirtualTable.svelte
src/lib/utils/: index.ts  lodash.ts
src/pages/: About.svelte  Home.svelte  LogDetail.svelte  LogDetails.svelte  Logs.svelte  LogsDetail.svelte  data.js
src/store/: logs.ts
src/store/logs/: index.ts
src/store/router/: index.ts  keys.ts  state.ts
