[package]
name = "tauri-react-typescript-app-example"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "tauri-react-typescript-app-example"
edition = "2018"
build = "src/build.rs"

[dependencies]
flate2 = "1.0.18"
sled = "0.34.4"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.9", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "tauri-react-typescript-app-example"
path = "src/main.rs"
